# Spectral1D

./: CMakeLists.txt  README  README.md
analysis/advection/: Advection.gp
analysis/aliasing/: makeplots.sh  u1.gp  u2.gp  v.gp  vAliased.gp  vTrue.gp
analysis/differentiate/: Derivatives.gp  ErrorAnalysis.gp
cmake/modules/: FindFFTW.cmake
src/: Advection.F90  CMakeLists.txt  Differentiate.F90  IO.F90  Parameters.F90  Spectral.F90  Transform.F90
src/core/: CMakeLists.txt  IO.F90  Parameters.F90  Spectral.F90
src/executables/: Advection.F90  AdvectionFD.F90  Aliasing.F90  CMakeLists.txt  Differentiate.F90  Parseval.F90  Transform.F90
